--- a/View/index.html
+++ b/View/index.html
@@ -83,7 +83,7 @@
     <!-- row 4 -->
         <div class="row m-5">
                <div class="col-sm-4 col-lg-3">
-                     <button type="button" id="onSubmit" class="btn btn-large btn-block btn-success">button</button>
+                     <button type="button" id="onSubmit" onclick="onSubmitbtn()" class="btn btn-large btn-block btn-success">button</button>
                 </div>
 
                 <div class="col-sm-4 col-lg-3">
